src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Campaign_Member_ID__c</fullName>
        <displayFormat>CM-{0000000000}</displayFormat>
        <label>Campaign Member ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerCallback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actimizer Scheduled Redial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerStatus__c</fullName>
        <label>Actimizer Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__CallAttempts__c</fullName>
        <label>Actimizer Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__DialTime__c</fullName>
        <label>Actimizer Redial Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actimizer Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CampaignMembersToDial</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__MaxCallAttemptsReached__c</fullName>
        <formula>AND(Campaign.actimizerdialer__MaxCallAttempts__c &gt; 0, actimizerdialer__CallAttempts__c &gt;= Campaign.actimizerdialer__MaxCallAttempts__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Call Attempts Reached</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>